[package]
name = "bevy_extensions"
version = "0.1.1"
authors = ["SecretPocketCat <jiridexterhanc@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "07ed1d053e7946a116ce3eef273fc93dd246f49d", default-features = false }

[dev-dependencies]
pretty_assertions = "1.0.0"
